--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $milano-red: #cc1f00;
 $cod-gray: #1e1e1e;
 $mine-shaft: #262626;
 $mine-shaft-1: #353535;
+$mine-shaft-2: #363636;
 
 $dove-gray: #666666;
 
@@ -49,6 +50,7 @@ $gap: 32px;
 
 
 // sizes
+$container-width: 700px;
 
 
 // z-index
