--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,3 +10,7 @@
 // base
 @import 'base/fonts';
 @import 'base/generic';
+
+// components
+@import 'components/icon';
+@import 'components/app-layout';
