--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -8,7 +8,11 @@ $mine-shaft: #262626;
 $mine-shaft-1: #353535;
 $mine-shaft-2: #363636;
 
+$tundora: #424242;
+
 $dove-gray: #666666;
+
+$silver-chalice: #a4a4a4;
 
 
 // fonts
