Верстка модального окна

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // colors
 $white: #ffffff;
+$black: #000000;
 
 $milano-red: #cc1f00;
 $cocoa-brown: #301e1b;
@@ -8,6 +9,7 @@ $cod-gray: #1e1e1e;
 $mine-shaft: #262626;
 $mine-shaft-1: #353535;
 $mine-shaft-2: #363636;
+$mine-shaft-3: #2a2a2a;
 
 $tundora: #424242;
 
@@ -65,6 +67,7 @@ $z-index-popup: 9999;
 
 // radius
 $border-radius: 8px;
+$border-radius-micro: 4px;
 
 
 // shadows
