--- a/src/assets/scss/components/_app-layout.scss
+++ b/src/assets/scss/components/_app-layout.scss
@@ -1,13 +1,11 @@
 .app-layout {
     display: flex;
 
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
 
     color: $white;
     background-color: $cod-gray;
-
-    &--main {}
 
     &__sidebar {
         overflow-y: auto;
@@ -20,15 +18,19 @@
     &__content {
         position: relative;
 
+        overflow-y: auto;
         flex-grow: 1;
 
-        padding: rem(70px) 0;
+        padding: 0 0 rem(70px);
 
         &-panel {
-            position: absolute;
-            top: rem(10px);
-            right: rem($gap-small);
-            left: rem($gap-small);
+            position: sticky;
+            top: 0;
+            left: 0;
+        }
+
+        &-container {
+            margin-top: rem(20px);
         }
     }
 }
