Добавлена библиотека компонентов форм FormKit
- удалена валидация vue-validate

- изменены формы

- данные списка заметок перенесены в стор

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -75,4 +75,4 @@ $border-radius-micro: 4px;
 
 // transitions
 $transition-duration: 300ms;
-$transition-function: ease-in-out;
+$transition-function: ease;
